[package]
name = "ida-mcp-rs"
version = "0.1.0"
edition = "2021"
description = "Multi-instance IDA MCP server — Rust coordinator + C++ idalib workers"

[dependencies]
# MCP protocol
rmcp = { version = "0.1", features = ["server", "transport-io"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
